dnl Process this file with autoconf to produce a configure script for libmaa.
dnl
dnl Created: Sun Nov  6 13:56:03 1994 by faith@dict.org
dnl Copyright 1994-1998, 2001-2002 Rickard E. Faith (faith@dict.org)
dnl Copyright 2002-2008 Aleksey Cheusov (vle@gmx.net)
dnl
dnl This program is free software; you can redistribute it and/or modify it
dnl under the terms of the GNU General Public License as published by the
dnl Free Software Foundation; either version 1, or (at your option) any
dnl later version.
dnl
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License along
dnl with this program; if not, write to the Free Software Foundation, Inc.,
dnl 675 Mass Ave, Cambridge, MA 02139, USA.
dnl
dnl Flag conventions:
dnl     CFLAGS and LDFLAGS should be settable on the make commandline
dnl             for optimization and stripping.

AC_PREREQ(2.53)
AC_REVISION($Revision: 1.59 $)
AC_INIT
AC_CONFIG_SRCDIR([maa.h])
AC_CONFIG_HEADER(config.h)

MAA_MAJOR=1
MAA_MINOR=3
MAA_TEENY=0

echo Configuring for libmaa $MAA_MAJOR.$MAA_MINOR.$MAA_TEENY
echo .

AC_CANONICAL_HOST
AC_PROG_AWK
AC_PROG_CC
#AC_PROG_LIBTOOL
AC_ISC_POSIX

if test "$CC" = gcc; then
    CFLAGS="-Wall -Werror $CFLAGS"
fi

dnl Checks for programs.
echo Checking for programs

AC_PROG_INSTALL

AC_CHECK_PROGS(PERL,perl4 perl)
AC_CHECK_PROGS(LATEX,latex2e latex)
AC_CHECK_PROGS(FIG2DEV,fig2dev)
AC_CHECK_PROGS(DVIPS,dvips)
AC_CHECK_PROGS(REFBIBTEX,refbibtex)
AC_CHECK_PROGS(BIBTEX,bibtex)

AC_CHECK_PROG(LIBTOOL,libtool,libtool)

echo .
echo Checking for header file support

AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(strings.h limits.h stdint.h inttypes.h)
AC_CHECK_HEADERS(sys/resource.h sys/time.h sys/param.h sys/wait.h)

AC_MSG_CHECKING(for SYSLOG_NAMES support in syslog.h)
AC_TRY_COMPILE([
#define SYSLOG_NAMES
#include <stdio.h>
#include <syslog.h>
], [
if (facilitynames [0].c_name && facilitynames [0].c_val) return 0;
],
AC_DEFINE([HAVE_SYSLOG_NAMES], [], 1. [Description]) AC_MSG_RESULT(yes),
AC_MSG_RESULT(no))

echo .
echo Checking for system constants

AC_TYPE_SIZE_T
AC_TYPE_SIGNAL
AC_C_INLINE
AC_C_BIGENDIAN
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(void *)
AC_CHECK_SIZEOF(long long int)

echo .
echo Checking for library functions

AC_FUNC_ALLOCA
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(snprintf)
AC_CHECK_FUNCS(gettimeofday strerror memcpy atexit on_exit sysconf)
AC_CHECK_FUNCS(strtol strtoul)
AC_CHECK_FUNCS(vsyslog)

AC_REPLACE_FUNCS(strtol strtoul)
AC_REPLACE_FUNCS(strlcpy)

echo .
echo Making output files

AC_SUBST(MAA_TEENY)
AC_SUBST(MAA_MINOR)
AC_SUBST(MAA_MAJOR)
AC_SUBST(AWK)
AC_SUBST(LIBTOOL)

AC_CONFIG_FILES([Makefile doc/Makefile arggram2c])

AC_OUTPUT

touch stamp-h.in
touch stamp-h
echo .
echo Done
